test-data/unit/check-modules.pyproject.test
-- Type checker test cases dealing with modules and imports.
-- Towards the end there are tests for PEP 420 (namespace packages, i.e. __init__.py-less packages).

[case testModuleGetattrInit10PyprojectTOML]
# flags: --config-file tmp/pyproject.toml
import a.b.c  # silenced
import a.b.d  # error

[file a/__init__.pyi]
from typing import Any
def __getattr__(attr: str) -> Any: ...
[file a/b/__init__.pyi]
# empty (i.e. complete subpackage)

[file pyproject.toml]
\[tool.mypy]
\[[tool.mypy.overrides]]
module = "a.b.c"
ignore_missing_imports = true
[builtins fixtures/module.pyi]
[out]
main:3: error: Cannot find implementation or library stub for module named "a.b.d"
main:3: note: See https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports

[case testNamespacePackageWithMypyPathPyprojectTOML]
# flags: --namespace-packages --config-file tmp/pyproject.toml
from foo.bax import x
from foo.bay import y
from foo.baz import z
reveal_type(x)  # N: Revealed type is "builtins.int"
reveal_type(y)  # N: Revealed type is "builtins.int"
reveal_type(z)  # N: Revealed type is "builtins.int"
[file xx/foo/bax.py]
x = 0
[file yy/foo/bay.py]
y = 0
[file foo/baz.py]
z = 0
[file pyproject.toml]
\[tool.mypy]
mypy_path = "tmp/xx,tmp/yy"

[case testClassicPackageIgnoresEarlierNamespacePackagePyprojectTOML]
# flags: --namespace-packages --config-file tmp/pyproject.toml
from foo.bar import y
reveal_type(y)  # N: Revealed type is "builtins.int"
[file xx/foo/bar.py]
x = ''
[file yy/foo/bar.py]
y = 0
[file yy/foo/__init__.py]
[file pyproject.toml]
\[tool.mypy]
mypy_path = "tmp/xx,tmp/yy"

[case testNamespacePackagePickFirstOnMypyPathPyprojectTOML]
# flags: --namespace-packages --config-file tmp/pyproject.toml
from foo.bar import x
reveal_type(x)  # N: Revealed type is "builtins.int"
[file xx/foo/bar.py]
x = 0
[file yy/foo/bar.py]
x = ''
[file pyproject.toml]
\[tool.mypy]
mypy_path = "tmp/xx,tmp/yy"

[case testNamespacePackageInsideClassicPackagePyprojectTOML]
# flags: --namespace-packages --config-file tmp/pyproject.toml
from foo.bar.baz import x
reveal_type(x)  # N: Revealed type is "builtins.int"
[file xx/foo/bar/baz.py]
x = ''
[file yy/foo/bar/baz.py]
x = 0
[file yy/foo/__init__.py]
[file pyproject.toml]
\[tool.mypy]
mypy_path = "tmp/xx,tmp/yy"

[case testClassicPackageInsideNamespacePackagePyprojectTOML]
# flags: --namespace-packages --config-file tmp/pyproject.toml
from foo.bar.baz.boo import x
reveal_type(x)  # N: Revealed type is "builtins.int"
[file xx/foo/bar/baz/boo.py]
x = ''
[file xx/foo/bar/baz/__init__.py]
[file yy/foo/bar/baz/boo.py]
x = 0
[file yy/foo/bar/__init__.py]
[file pyproject.toml]
\[tool.mypy]
mypy_path = "tmp/xx,tmp/yy"
